--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
+VITE_API_BASE_URL=http://localhost:5000
+
 # Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=dzbrnr1pr
 CLOUDINARY_API_KEY=423138598718265
