--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-VITE_API_BASE_URL=http://localhost:5000
+VITE_API_BASE_URL=https://food-order-gax4.onrender.com
+
 
 # Cloudinary Configuration
 CLOUDINARY_CLOUD_NAME=dzbrnr1pr
